Ensure default route is purged before gateway-defined subint will be UP
ISSUE: Ubuntu affected only.
Assumes never put several interfaces to single L2 broadcast domain, if one of them is dhcp enabled, otherwise, for vlan/bond enabled interfaces, multiple or wrong default routes might have been created
on start-up time, thus, preventing desired gateway x.y.z.t would have been
added for default route on its static subinterface(vlan/bond slave) start-up.

F.e. for eth0 auto with dhcp and its eth0.100 subint with gateway x.y.z.t defined:
1) eth0 starts up
2) default route have created from dhcp-defined gateway f.g.h.i via eth0 (or ethZ, if it shares the
same L2 broadcast domain with eth0)
3) eth0.100 starts up
4) gateway x.y.z.t ignored as well ...

To avoid this, you can add pre-up hooks for every main/slave interface to erase existing
default route (if any) configured via this or any other main interface, but that would be an ugly solution.

Fixes: #PRD-2023

Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/deployment/puppet/l23network/templates/ipconfig_Debian_bondslave.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_bondslave.erb
@@ -1,3 +1,4 @@
 auto <%= interface %>
 iface <%= interface %> inet manual
 bond-master <%= @bond_master %>
+pre-up route del default <%= /^(\w+\d+)\.(\d+)/.match(interface)[1] rescue /^(\w+\d+)/.match(interface)[1] rescue "nullface".to_s %> || true
