--- a/deployment/puppet/l23network/templates/ipconfig_Debian_dhcp.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_dhcp.erb
@@ -8,3 +8,4 @@ bond-mode <%= @bond_mode %><% if @bond_miimon %>
 bond-miimon <%= @bond_miimon %><% end %><% if @bond_lacp_rate %>
 bond-lacp-rate <%= @bond_lacp_rate %><% end %>
 <% end %>
+pre-up route del default <%= /^(\w+\d+)\.(\d+)/.match(interface)[1] rescue /^(\w+\d+)/.match(interface)[1] rescue "nullface".to_s %> || true
