--- a/deployment/puppet/murano/templates/rabbitmq-init-centos.erb
+++ b/deployment/puppet/murano/templates/rabbitmq-init-centos.erb
@@ -29,6 +29,7 @@ export RABBITMQ_MNESIA_BASE="/var/lib/rabbitmq/mnesia-murano"
 export RABBITMQ_LOG_BASE="/var/log/rabbitmq-murano"
 export RABBITMQ_ENABLED_PLUGINS_FILE="/etc/rabbitmq/enabled_plugins_murano"
 export RABBITMQ_NODENAME="murano@localhost"
+export RABBITMQ_NODE_PORT="<%= @rabbitmq_main_port %>"
 
 START_PROG="runuser rabbitmq --session-command"
 LOCK_FILE="/var/lock/subsys/${NAME}"
