[PRD-2326] sync ntp during anaconda post as well

--- a/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
+++ b/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
@@ -177,6 +177,10 @@ $SNIPPET('puppet_register_if_enabled_fuel')
 # CONFIGURES MCOLLECTIVE AGENT
 $SNIPPET('mcollective_conf')
 
+# SNIPPET: 'kickstart_ntp'
+# SYNC LOCAL TIME VIA NTP
+$SNIPPET('kickstart_ntp')
+
 # SNIPPET: 'ntp_to_masternode'
 # CONFIGURES NTPD POOL TO MASTER NODE
 $SNIPPET('ntp_to_masternode')
