--- a/deployment/puppet/cobbler/templates/snippets/ntp_to_masternode_ubuntu.erb
+++ b/deployment/puppet/cobbler/templates/snippets/ntp_to_masternode_ubuntu.erb
@@ -3,3 +3,5 @@ sed -i '1 i tinker panic 0' /target/etc/ntp.conf && \
 echo 0 > /target/var/lib/ntp/drift && \
 sed -i '/^\s*server/ d' /target/etc/ntp.conf && \
 echo "server $server burst iburst" >> /target/etc/ntp.conf && \
+ntpdate -t 4 -b $server && \
+hwclock --systohc && \
