--- a/deployment/puppet/horizon/templates/local_settings.py.erb
+++ b/deployment/puppet/horizon/templates/local_settings.py.erb
@@ -181,4 +181,4 @@ LOGIN_REDIRECT_URL='<%=  scope.lookupvar("horizon::params::root_url") %>'
 # The Ubuntu package includes pre-compressed JS and compiled CSS to allow
 # offline compression by default.  To enable online compression, install
 # the node-less package and enable the following option.
-COMPRESS_OFFLINE = False
+COMPRESS_OFFLINE = True #False
