--- a/deployment/puppet/cobbler/templates/snippets/mcollective_conf.erb
+++ b/deployment/puppet/cobbler/templates/snippets/mcollective_conf.erb
@@ -33,6 +33,7 @@ plugin.rabbitmq.pool.1.host = $mco_host
 plugin.rabbitmq.pool.1.port = $mco_port
 plugin.rabbitmq.pool.1.user = $mco_user
 plugin.rabbitmq.pool.1.password = $mco_password
+plugin.rabbitmq.heartbeat_interval = 30
 #end if
 
 
