--- a/deployment/puppet/cobbler/templates/snippets/ubuntu_mcollective_config.erb
+++ b/deployment/puppet/cobbler/templates/snippets/ubuntu_mcollective_config.erb
@@ -22,6 +22,7 @@ plugin.rabbitmq.pool.1.host = %(mco_host)s
 plugin.rabbitmq.pool.1.port = %(mco_port)s
 plugin.rabbitmq.pool.1.user = %(mco_user)s
 plugin.rabbitmq.pool.1.password = %(mco_password)s
+plugin.rabbitmq.heartbeat_interval = 30
 
 # Facts
 factsource = yaml
