--- a/deployment/puppet/ceph/templates/secret.erb
+++ b/deployment/puppet/ceph/templates/secret.erb
@@ -1,6 +1,6 @@
 <secret ephemeral='no' private='no'>
 <uuid><%= @rbd_secret_uuid %></uuid>
 <usage type='ceph'>
-<name>client.volumes secret</name>
+<name>client.<%= @user %> secret</name>
 </usage>
 </secret>
