Fix wget timeout in RHN satellite key download

--- a/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
+++ b/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
@@ -209,7 +209,7 @@ $SNIPPET('ssh_disable_gssapi')
 
 # COBBLER EMBEDDED SNIPPET: 'redhat_register'
 # REGISTER AT REDHAT WITH ACTIVATION KEY
-$SNIPPET('redhat_register')
+$SNIPPET('red_hat_register_satellite')
 # REGISTER TO RED HAT SUBSCRIPTION MANAGER WITH LOGIN/PASSWORD
 $SNIPPET('red_hat_register_rhsm')
 
