Fix "False" development setting in nailgun

--- a/deployment/puppet/nailgun/templates/settings.yaml.erb
+++ b/deployment/puppet/nailgun/templates/settings.yaml.erb
@@ -1,6 +1,6 @@
 LISTEN_ADDRESS: "127.0.0.1"
 LISTEN_PORT: "8001"
-DEVELOPMENT: "0"
+DEVELOPMENT: false
 
 DATABASE:
   engine: "<%= database_engine %>"
