Fix dashboard CACHE location string
Change-Id: I4b74f55f25f61af99b076fc6700e18e3c3bc4185
Closes-bug: 1259969

--- a/deployment/puppet/horizon/templates/local_settings.py.erb
+++ b/deployment/puppet/horizon/templates/local_settings.py.erb
@@ -109,7 +109,7 @@ SECRET_KEY = '<%= secret_key %>'
 CACHES = {
     'default': {
         'BACKEND' : 'django.core.cache.backends.memcached.MemcachedCache',
-        'LOCATION' : "<%= cache_server_ip.collect {|ip| ip + ':' + cache_server_port }.join %>"
+        'LOCATION' : "<%= cache_server_ip.collect {|ip| ip + ':' + cache_server_port }.join ';' %>"
     },
     #'local': {
     #    'BACKEND' : 'django.core.cache.backends.locmem.LocMemCache'
