Change default case to none in post_install_network_config.erb
Removes long wait times in centos on first boot when devices are left
 in DHCP mode and have to wait for timeout.

Resolves-bug #1260879

Change-Id: Iaf4f2fa55ba96cc9298cad02a67e2309c74e9cb6

--- a/deployment/puppet/cobbler/templates/snippets/post_install_network_config_fuel.erb
+++ b/deployment/puppet/cobbler/templates/snippets/post_install_network_config_fuel.erb
@@ -238,8 +238,8 @@ echo "IPV6_DEFAULTGW=$ipv6_default_gateway" >> $devfile
                 #end if
             #end if
         #else
-            ## this is a DHCP interface, much less work to do
-echo "BOOTPROTO=dhcp" >> $devfile
+            ## this is a un-assigned interface, much less work to do
+echo "BOOTPROTO=none" >> $devfile
 	#end if
         ## ===================================================================
         ## VLAN configuration
