Fix SMBus piix4 error in Ubuntu and Centos
This applies only for VirtualBox deployment

All OSes: blacklist i2c_piix4 kernel module
Ubuntu: update initramfs after applying change

Change-Id: I9e5215d9c30f191c0b4e46e6146ac36d4c56d153
Closes-Bug: #1259118

--- a/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
+++ b/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
@@ -233,6 +233,9 @@ $SNIPPET('target_logs_to_master')
 # Configure static IP address for admin interface
 $SNIPPET('centos_static_net')
 
+# Blacklist i2c_piix4 module so it does not create kernel errors
+$SNIPPET('centos_blacklist_i2c_piix4')
+
 # COBBLER EMBEDDED SNIPPET: 'kickstart_done'
 # DISABLES PXE BOOTING
 $SNIPPET('kickstart_done')
