--- a/deployment/puppet/cobbler/templates/snippets/centos_blacklist_i2c_piix4.erb
+++ b/deployment/puppet/cobbler/templates/snippets/centos_blacklist_i2c_piix4.erb
@@ -1,1 +1,1 @@
-[[ $(virt-what) = "virtualbox" ]] && echo "blacklist i2c_piix4" >> /target/etc/modprobe.d/blacklist-i2c_piix4.conf
+[[ $(virt-what) = "virtualbox" ]] && echo "blacklist i2c_piix4" >> /etc/modprobe.d/blacklist-i2c_piix4.conf
