--- a/deployment/puppet/openstack/templates/20-fuel.conf.erb
+++ b/deployment/puppet/openstack/templates/20-fuel.conf.erb
@@ -21,6 +21,7 @@
 "/var/log/mysqld.log"
 "/var/log/murano/*.log"
 "/var/log/heat/*.log"
+"/var/log/savanna/*.log"
 # This file is used for hourly log rotations, use (min)size options here
 {
   sharedscripts
