--- a/deployment/puppet/openstack/templates/20-fuel.conf.erb
+++ b/deployment/puppet/openstack/templates/20-fuel.conf.erb
@@ -2,7 +2,7 @@
 "/var/log/kern.log" "/var/log/debug" "/var/log/syslog"
 "/var/log/dashboard.log" "/var/log/pacemaker.log" "/var/log/neutron/*.log"
 "/var/log/nova/*.log" "/var/log/keystone/*.log" "/var/log/glance/*.log"
-"/var/log/cinder/*.log"
+"/var/log/cinder/*.log" "/var/log/savanna/*.log"
 # This file is used for hourly log rotations, use (min)size options here
 {
   sharedscripts
