--- a/deployment/puppet/horizon/templates/local_settings.py.erb
+++ b/deployment/puppet/horizon/templates/local_settings.py.erb
@@ -163,7 +163,7 @@ OPENSTACK_KEYSTONE_BACKEND = {
 }
 
 OPENSTACK_HYPERVISOR_FEATURES = {
-    'can_set_mount_point': True,  # default is False
+    'can_set_mount_point': False
 }
 
 # The OPENSTACK_NEUTRON_NETWORK settings can be used to enable optional
