Use lower case for syslog facilites
Closes-bug: #1263675

Change-Id: I9cf19df638d27c095b015174553d864d4f1fd143
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/deployment/puppet/swift/templates/account-server.conf.erb
+++ b/deployment/puppet/swift/templates/account-server.conf.erb
@@ -4,7 +4,7 @@ bind_ip = <%= storage_local_net_ip %>
 bind_port = <%= bind_port %>
 mount_check = <%= mount_check %>
 user = <%= user %>
-log_facility = LOG_SYSLOG
+log_facility = syslog
 <% if @debug then -%>
 log_level = DEBUG
 <% elsif @verbose then -%>
