--- a/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
+++ b/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
@@ -85,6 +85,12 @@ $SNIPPET('pre_install_partition_lvm')
 %packages --nobase --ignoremissing
 @Core
 authconfig
+bfa-firmware
+ql2100-firmware
+ql2200-firmware
+ql23xx-firmware
+ql2400-firmware
+ql2500-firmware
 bind-utils
 cronie
 crontabs
