Moving to the RabbitMQ 3.
Removal of nonsense ttl defaulting to 10k secs,
default port change.

Change-Id: I58662a4d9fa5df6166414525a326ac1948b49247

--- a/deployment/puppet/rabbitmq/templates/rabbitmq-server_redhat.erb
+++ b/deployment/puppet/rabbitmq/templates/rabbitmq-server_redhat.erb
@@ -173,6 +173,7 @@ RabbitMQ Server before consider start failed."
             esac
             MAX_START_ATTEMPTS=$((MAX_START_ATTEMPTS - 1))
         done
+	rabbitmqctl set_policy ha-all "." '{"ha-mode":"all", "ha-sync-mode":"automatic"}'
     fi
 }
 
