--- a/deployment/puppet/rabbitmq/templates/rabbitmq-server_ubuntu.erb
+++ b/deployment/puppet/rabbitmq/templates/rabbitmq-server_ubuntu.erb
@@ -161,6 +161,7 @@ start_rabbitmq () {
             fi
             MAX_START_ATTEMPTS=$((MAX_START_ATTEMPTS - 1))
         done
+	rabbitmqctl set_policy ha-all "." '{"ha-mode":"all", "ha-sync-mode":"automatic"}'
     else
         RETVAL=3
     fi
