Run a nailgund instance for each CPU up to 32
Closes-bug: #1274614
Change-Id: I040dac97cd528a1cd737cf0d2ea7c248af7d680e

--- a/deployment/puppet/nailgun/templates/nginx_nailgun.conf.erb
+++ b/deployment/puppet/nailgun/templates/nginx_nailgun.conf.erb
@@ -1,5 +1,7 @@
 upstream nailgun-application {
-    server 127.0.0.1:8001;
+<% nailgund_ports.split(' ').each do |port| -%>
+    server 127.0.0.1:<%= port %>;
+<% end -%>
 }
 
 server {
