--- a/deployment/puppet/l23network/templates/ipconfig_Debian_bondslave.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_bondslave.erb
@@ -1,3 +1,10 @@
 auto <%= interface %>
 iface <%= interface %> inet manual
 bond-master <%= @bond_master %>
+<% if @macaddr -%>
+hwaddress ether <%= @macaddr.downcase %>
+<% end -%>
+<% if @mtu -%>
+mtu <%= @mtu %>
+<% end -%>
+
