--- a/deployment/puppet/l23network/templates/ipconfig_RedHat_bondslave.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_RedHat_bondslave.erb
@@ -4,3 +4,10 @@ ONBOOT=yes
 USERCTL=no
 MASTER=<%= @bond_master %>
 SLAVE=yes
+<% if @macaddr -%>
+MACADDR=<%= @macaddr.upcase %>
+<% end -%>
+<% if @mtu -%>
+MTU=<%= @mtu %>
+<% end -%>
+
