Enable corosync logfile back
In order to collect HA logs locally as well to syslog,
use either corosync logfile option or custom rsyslog
template, but not both.
This patch will put corosync local logging back.

Closes bug: #1275127

Change-Id: I237414f38c312243ad51e5d14f6c6141b684f956
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/deployment/puppet/corosync/templates/corosync.conf.erb
+++ b/deployment/puppet/corosync/templates/corosync.conf.erb
@@ -20,8 +20,8 @@ totem {
 
 logging {
   fileline:        off
-  to_stderr:       no 
-  to_logfile:      no
+  to_stderr:       no
+  to_logfile:      yes
   logfile:         /var/log/corosync.log
   to_syslog:       yes
   syslog_facility: daemon
