--- a/deployment/puppet/openstack/templates/10-fuel.conf.erb
+++ b/deployment/puppet/openstack/templates/10-fuel.conf.erb
@@ -2,6 +2,7 @@
 "/var/log/kern.log" "/var/log/debug" "/var/log/syslog" "/var/log/daemon.log"
 "/var/log/auth.log" "/var/log/user.log" "var/log/mail.log"
 "/var/log/cron.log" "/var/log/dashboard.log" "/var/log/pacemaker.log"
+"/var/log/cron.log" "/var/log/dashboard.log" "/var/log/pacemaker.log" "/var/log/mysqld.log"
 {
 # This file is used for daily log rotations, do not use size options here
   sharedscripts
