--- a/deployment/puppet/openstack/templates/20-fuel.conf.erb
+++ b/deployment/puppet/openstack/templates/20-fuel.conf.erb
@@ -1,8 +1,24 @@
-"/var/log/*-all.log" "/var/log/corosync.log" "/var/log/remote/*/*log"
-"/var/log/kern.log" "/var/log/debug" "/var/log/syslog"
-"/var/log/dashboard.log" "/var/log/pacemaker.log" "/var/log/neutron/*.log"
-"/var/log/nova/*.log" "/var/log/keystone/*.log" "/var/log/glance/*.log"
-"/var/log/cinder/*.log" "/var/log/mysqld.log"
+# managed by puppet
+
+"/var/log/*-all.log"
+"/var/log/corosync.log"
+"/var/log/remote/*/*log"
+"/var/log/kern.log"
+"/var/log/debug"
+"/var/log/syslog"
+"/var/log/daemon.log"
+"/var/log/auth.log"
+"/var/log/user.log"
+"/var/log/mail.log"
+"/var/log/cron.log"
+"/var/log/dashboard.log"
+"/var/log/pacemaker.log"
+"/var/log/neutron/*.log"
+"/var/log/nova/*.log"
+"/var/log/keystone/*.log"
+"/var/log/glance/*.log"
+"/var/log/cinder/*.log"
+"/var/log/mysqld.log"
 # This file is used for hourly log rotations, use (min)size options here
 {
   sharedscripts
@@ -14,9 +30,10 @@
   size <%= @limitsize %>
   # keep logs for <%= @keep %> rotations
   rotate <%= @keep %>
-  # compression is postponed to next rotation
+  # compression will be postponed to the next rotation, if uncommented
+  # delaycompress
   compress
-  delaycompress
+  # delaycompress
   # ignore missing files
   missingok
   # do not rotate empty files
