Minor refactor for syslog logging
- Fix missed log config notify for glance-api, glance-registry
- Fix confusing titles for generic/main Openstack services
- Removed unnecessary 'ensure absent' for config providers
- Removed confusing unused logging config for local logging cases
- Synced confusing 10-fuel & 20-fuel file lists to be the same
- Removed delaycompress option from logrotate configs
- Removed hardcoded logging_context_format_string,
  and logging_default_format_string config settings
- Removed clumsy value selectors for debug/verbose/use_syslog
- Use top scope for verbose, debug, use_syslog options in cluster*.pp

Implements blueprint: refactor-logging-puppet-openstack-services

Change-Id: I543c52c9fe6a95d3bc6eb6f87c0599e659ee01ec
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/deployment/puppet/openstack/templates/10-fuel.conf.erb
+++ b/deployment/puppet/openstack/templates/10-fuel.conf.erb
@@ -1,7 +1,24 @@
-"/var/log/*-all.log" "/var/log/corosync.log" "/var/log/remote/*/*log"
-"/var/log/kern.log" "/var/log/debug" "/var/log/syslog" "/var/log/daemon.log"
-"/var/log/auth.log" "/var/log/user.log" "var/log/mail.log"
-"/var/log/cron.log" "/var/log/dashboard.log" "/var/log/ha.log"
+# managed by puppet
+
+"/var/log/*-all.log"
+"/var/log/corosync.log"
+"/var/log/remote/*/*log"
+"/var/log/kern.log"
+"/var/log/debug"
+"/var/log/syslog"
+"/var/log/daemon.log"
+"/var/log/auth.log"
+"/var/log/user.log"
+"/var/log/mail.log"
+"/var/log/cron.log"
+"/var/log/dashboard.log"
+"/var/log/pacemaker.log"
+"/var/log/neutron/*.log"
+"/var/log/nova/*.log"
+"/var/log/keystone/*.log"
+"/var/log/glance/*.log"
+"/var/log/cinder/*.log"
+"/var/log/mysql.log"
 {
 # This file is used for daily log rotations, do not use size options here
   sharedscripts
@@ -12,9 +29,9 @@
   copytruncate
   # keep logs for <%= @keep %> rotations
   rotate <%= @keep %>
-  # compression is postponed to next rotation
+  # compression will be postponed to the next rotation, if uncommented
+  # delaycompress
   compress
-  delaycompress
   # ignore missing files
   missingok
   # do not rotate empty files
