add 'macaddr' option to the 'ifconfig' resource
Change-Id: Ic7e7e68e40d5c4c0f3a99926c62d2ede320ca834

--- a/deployment/puppet/l23network/templates/ipconfig_Debian_bondslave.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_bondslave.erb
@@ -1,3 +1,6 @@
 auto <%= interface %>
 iface <%= interface %> inet manual
 bond-master <%= @bond_master %>
+<% if @macaddr -%>
+hwaddress ether <%= @macaddr.downcase %>
+<% end -%>
