--- a/deployment/puppet/l23network/templates/ipconfig_Debian_manual.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_manual.erb
@@ -1,5 +1,8 @@
 auto <%= interface %>
 iface <%= interface %> inet manual
+<% if @macaddr -%>
+hwaddress ether <%= @macaddr.downcase %>
+<% end -%>
 <% if @vlan_mode %>vlan_raw_device <%= @vlan_dev %><% end %>
 up ip l set <%= interface %> up
 down ip l set <%= interface %> down
