--- a/deployment/puppet/l23network/templates/ipconfig_Debian_static.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_static.erb
@@ -1,5 +1,8 @@
 auto <%= interface %>
 iface <%= interface %> inet static
+<% if @macaddr -%>
+hwaddress ether <%= @macaddr.downcase %>
+<% end -%>
 <% if @vlan_mode %>vlan_raw_device <%= @vlan_dev %><% end %>
 address <%= effective_ipaddr %>
 netmask <%= effective_netmask %>
