--- a/deployment/puppet/rsyslog/templates/00-remote.conf.erb
+++ b/deployment/puppet/rsyslog/templates/00-remote.conf.erb
@@ -9,8 +9,10 @@ $Template RemoteLog, "<%%pri%>%timestamp% %hostname% %syslogtag%%msg:::sp-if-no-
 # Note: don't use %app-name% cuz it would be empty for some cases
 $ActionFileDefaultTemplate RemoteLog
 
+<% servers = ['localhost','127.0.0.1','::1'] -%>
 <% scope.lookupvar('rsyslog::client::rservers_real').each do |rserver| -%>
-<% if ! ['localhost','127.0.0.1','::1'].include?(rserver['server']) -%>
+<% if ! servers.include?(rserver['server']) -%>
+<% servers.push(rserver['server']) -%>
 <% if rserver['remote_type'] == 'tcp' -%>
 # Send messages we receive to master node via tcp
 *.* @@<%= rserver['server']-%>:<%= rserver['port'] -%>;RemoteLog
