L23network: allow setup MTU in the network_schema
This commit allow define MTU for interfaces and endpoints

Change-Id: I0038286fc75a6935cfcd6fefcfa6acd071a66f59
Blueprint: https://blueprints.launchpad.net/fuel/+spec/set-mtu-for-interfaces
BUG: 1274789

--- a/deployment/puppet/l23network/templates/ipconfig_Debian_bondslave.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_bondslave.erb
@@ -4,3 +4,6 @@ bond-master <%= @bond_master %>
 <% if @macaddr -%>
 hwaddress ether <%= @macaddr.downcase %>
 <% end -%>
+<% if @mtu -%>
+mtu <%= @mtu %>
+<% end -%>
