--- a/deployment/puppet/l23network/templates/ipconfig_RedHat_dhcp.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_RedHat_dhcp.erb
@@ -21,3 +21,6 @@ MACADDR=<%= @macaddr.upcase %>
 <% if @bond_mode -%>
 BONDING_OPTS="mode=<%= @bond_mode %><% if @bond_miimon %> miimon=<%= @bond_miimon %><% end %><% if @bond_lacp_rate %> bond-lacp-rate=<%= @bond_lacp_rate %><% end %>"
 <% end -%>
+<% if @mtu -%>
+MTU=<%= @mtu %>
+<% end -%>
