Add puppet-3.4 support
Adding puppet-3.4 support. It also should work under puppet-2.7.
In order to work properly with puppet-3.4 also requires some updates
in packages:
- ruby-rgen >= 0.6.5
- hiera >= 1.3.1

Change-Id: I40ffb6961e2b6de8090040f545648143e926872d

--- a/deployment/puppet/corosync/templates/corosync.conf.erb
+++ b/deployment/puppet/corosync/templates/corosync.conf.erb
@@ -8,13 +8,13 @@ totem {
   max_messages:                        20
   clear_node_high_bit:                 yes
   rrp_mode:                            none
-  secauth:                             <%= enable_secauth %>
-  threads:                             <%= threads %>
+  secauth:                             <%= @enable_secauth %>
+  threads:                             <%= @threads %>
   interface {
     ringnumber:   0
-    bindnetaddr:  <%= bind_address %>
-    mcastaddr:    <%= multicast_address %>
-    mcastport:    <%= port %>
+    bindnetaddr:  <%= @bind_address %>
+    mcastaddr:    <%= @multicast_address %>
+    mcastport:    <%= @port %>
   }
 }
 
