--- a/deployment/puppet/mcollective/templates/client.cfg.erb
+++ b/deployment/puppet/mcollective/templates/client.cfg.erb
@@ -7,7 +7,7 @@ direct_addressing = 1
 
 # Plugins
 securityprovider = psk
-plugin.psk = <%= pskey %>
+plugin.psk = <%= @pskey %>
 
 ttl = 2000000000
 
