--- a/deployment/puppet/rsyslog/templates/30-server-remote-log.conf.erb
+++ b/deployment/puppet/rsyslog/templates/30-server-remote-log.conf.erb
@@ -12,6 +12,13 @@ $ActionFileDefaultTemplate RemoteLog
 
 # Would match 'kernel:' -> 'kernel'  ;  'rsyslogd[12345]:' -> 'rsyslogd'  ;  '<180>(nova.api.wsgi):'  ->  'nova.api.wsgi'  ;  'install/anaconda'  ->  'install/anaconda'
 $template RemoteLogFile, "/var/log/remote/%FROMHOST%/%syslogtag:R,ERE,1,DFLT:([A-Za-z][A-Za-z0-9_./-]*)--end%.log"
+$template PuppetApplyLogFile, "/var/log/remote/%FROMHOST%/puppet-apply.log"
+
+:syslogtag, regex, "puppet-user" ?PuppetApplyLogFile;RemoteLog
+:syslogtag, regex, "puppet-user" ~
+
+:syslogtag, regex, "puppet-error" ?PuppetApplyLogFile;RemoteLog
+:syslogtag, regex, "puppet-error" ~
 
 :FROMHOST, regex, "^[1-9]" ?RemoteLogFile;RemoteLog
 # Drop message here and do not forward
