--- a/deployment/puppet/swift/templates/proxy/keystone.conf.erb
+++ b/deployment/puppet/swift/templates/proxy/keystone.conf.erb
@@ -1,7 +1,7 @@
 
 [filter:keystone]
 use = egg:swift#keystoneauth
-operator_roles = <%= operator_roles.to_a.join(', ') %>
-is_admin = <%= is_admin %>
-cache = <%= cache %>
+operator_roles = <%= @operator_roles.to_a.join(', ') %>
+is_admin = <%= @is_admin %>
+cache = <%= @cache %>
 
