--- a/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
+++ b/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
@@ -5,7 +5,7 @@ install
 url --url=$tree
 
 # ALTERNATIVE REPOSITORIES
-<% ks_repo.each do |repo| %>
+<% @ks_repo.each do |repo| %>
 repo --name=<%= repo['name'] %> --baseurl=<%= repo['url'] %>
 <% end %>
 
@@ -14,7 +14,7 @@ lang en_US.UTF-8
 keyboard us
 
 # WHICH TIMEZONE TO USE ON INSTALLED SYSTEM
-timezone --utc <%= ks_system_timezone %>
+timezone --utc <%= @ks_system_timezone %>
 
 # REBOOT AFTER INSTALLATION
 reboot
@@ -23,7 +23,7 @@ firewall --disable
 zerombr
 
 # SET ROOT PASSWORD DEFAULT IS r00tme
-rootpw --iscrypted <%= ks_encrypted_root_password %>
+rootpw --iscrypted <%= @ks_encrypted_root_password %>
 
 # AUTHENTICATION CUSTOMIZATION
 authconfig --enableshadow --passalgo=sha512
@@ -152,10 +152,10 @@ echo -e "kernel.core_pattern=/var/log/coredump/core.%e.%p.%h.%t" >> /etc/sysctl.
 chmod 777 /var/log/coredump
 echo -e "* soft core unlimited\n* hard core unlimited" >> /etc/security/limits.conf
 
-gem install httpclient --version 2.2.5  --source <%= gem_source %> --no-ri --no-rdoc
-gem install json       --version 1.6.1  --source <%= gem_source %> --no-ri --no-rdoc
-gem install ohai       --version 6.14.0 --source <%= gem_source %> --no-ri --no-rdoc
-gem install rethtool   --version 0.0.3  --source <%= gem_source %> --no-ri --no-rdoc
+gem install httpclient --version 2.2.5  --source <%= @gem_source %> --no-ri --no-rdoc
+gem install json       --version 1.6.1  --source <%= @gem_source %> --no-ri --no-rdoc
+gem install ohai       --version 6.14.0 --source <%= @gem_source %> --no-ri --no-rdoc
+gem install rethtool   --version 0.0.3  --source <%= @gem_source %> --no-ri --no-rdoc
 mkdir -p /etc/nailgun-agent/
 cat > /etc/nailgun-agent/config.yaml << EOA
 ---
