--- a/deployment/puppet/memcached/templates/memcached_sysconfig.erb
+++ b/deployment/puppet/memcached/templates/memcached_sysconfig.erb
@@ -1,5 +1,5 @@
-PORT="<%= udp_port %>"
-USER="<%= user %>"
-MAXCONN="<%= max_connections %>"
-CACHESIZE="<%= max_memory %>"
-OPTIONS="-l <%= listen_ip %>"
+PORT="<%= @udp_port %>"
+USER="<%= @user %>"
+MAXCONN="<%= @max_connections %>"
+CACHESIZE="<%= @max_memory %>"
+OPTIONS="-l <%= @listen_ip %>"
