--- a/deployment/puppet/nailgun/templates/settings.yaml.erb
+++ b/deployment/puppet/nailgun/templates/settings.yaml.erb
@@ -3,17 +3,17 @@ LISTEN_PORT: "8001"
 DEVELOPMENT: false
 
 DATABASE:
-  engine: "<%= database_engine %>"
-  name: "<%= database_name %>"
-  host: "<%= database_host %>"
-  port: "<%= database_port %>"
-  user: "<%= database_user %>"
-  passwd: "<%= database_passwd %>"
+  engine: "<%= @database_engine %>"
+  name: "<%= @database_name %>"
+  host: "<%= @database_host %>"
+  port: "<%= @database_port %>"
+  user: "<%= @database_user %>"
+  passwd: "<%= @database_passwd %>"
 
-FUEL_KEY: "<%= fuel_key %>"
+FUEL_KEY: "<%= @fuel_key %>"
 
-STATIC_DIR: "<%= staticdir %>"
-TEMPLATE_DIR: "<%= templatedir %>"
+STATIC_DIR: "<%= @staticdir %>"
+TEMPLATE_DIR: "<%= @templatedir %>"
 NETWORK_POOLS:
   public:
     - "172.16.0.0/16"
@@ -39,8 +39,8 @@ RABBITMQ:
   fake: "0"
   hostname: "127.0.0.1"
   port: 5672
-  userid: "<%= rabbitmq_naily_user %>"
-  password: "<%= rabbitmq_naily_password %>"
+  userid: "<%= @rabbitmq_naily_user %>"
+  password: "<%= @rabbitmq_naily_password %>"
   virtual_host: "/"
 
 APP_LOG: "/var/log/nailgun/app.log"
@@ -49,23 +49,23 @@ API_LOG: "/var/log/nailgun/api.log"
 PATH_TO_SSH_KEY: "/root/.ssh/id_rsa"
 PATH_TO_BOOTSTRAP_SSH_KEY: "/root/.ssh/bootstrap.rsa"
 
-MASTER_IP: "<%= admin_network_ip %>"
+MASTER_IP: "<%= @admin_network_ip %>"
 
 COBBLER_URL: "<%= scope.lookupvar('nailgun::cobbler_url') %>"
-COBBLER_USER: "<%= cobbler_user %>"
-COBBLER_PASSWORD: "<%= cobbler_password %>"
+COBBLER_USER: "<%= @cobbler_user %>"
+COBBLER_PASSWORD: "<%= @cobbler_password %>"
 COBBLER_PROFILE: "centos-x86_64"
 
-MCO_PSKEY: "<%= mco_pskey %>"
-MCO_VHOST: "<%= mco_vhost %>"
+MCO_PSKEY: "<%= @mco_pskey %>"
+MCO_VHOST: "<%= @mco_vhost %>"
 MCO_HOST: <%= scope.lookupvar('nailgun::mco_host') %>
-MCO_USER: "<%= mco_user %>"
-MCO_PASSWORD: "<%= mco_password %>"
-MCO_CONNECTOR: "<%= mco_connector %>"
+MCO_USER: "<%= @mco_user %>"
+MCO_PASSWORD: "<%= @mco_password %>"
+MCO_CONNECTOR: "<%= @mco_connector %>"
 
-PUPPET_MASTER_HOST: "<%= puppet_master_hostname %>"
+PUPPET_MASTER_HOST: "<%= @puppet_master_hostname %>"
 PUPPET_VERSION: "2.7.19"
 
-DNS_DOMAIN: "<%= domain %>"
+DNS_DOMAIN: "<%= @domain %>"
 DNS_SERVERS: "<%= scope.lookupvar('nailgun::puppet_master_ip') %>"
-DNS_SEARCH: "<%= domain %>"
+DNS_SEARCH: "<%= @domain %>"
