--- a/deployment/puppet/rsync/templates/header.erb
+++ b/deployment/puppet/rsync/templates/header.erb
@@ -4,9 +4,9 @@
 pid file = /var/run/rsyncd.pid
 uid = nobody
 gid = nobody
-use chroot = <%= use_chroot %>
+use chroot = <%= @use_chroot %>
 log format = %t %a %m %f %b
 syslog facility = local3
 timeout = 300
-address = <%= address %>
-<% if motd_file != 'UNSET' %>motd file = <%= motd_file %><% end %>
+address = <%= @address %>
+<% if @motd_file != 'UNSET' %>motd file = <%= @motd_file %><% end %>
