--- a/deployment/puppet/swift/templates/object-server.conf.erb
+++ b/deployment/puppet/swift/templates/object-server.conf.erb
@@ -1,9 +1,9 @@
 [DEFAULT]
-devices = <%= devices %>
-bind_ip = <%= storage_local_net_ip %>
-bind_port = <%= bind_port %>
-mount_check = <%= mount_check %>
-user = <%= user %>
+devices = <%= @devices %>
+bind_ip = <%= @storage_local_net_ip %>
+bind_port = <%= @bind_port %>
+mount_check = <%= @mount_check %>
+user = <%= @user %>
 log_facility = LOG_SYSLOG
 <% if @debug then -%>
 log_level = DEBUG
@@ -13,18 +13,18 @@ log_level = INFO
 log_level = <%= @syslog_log_level %>
 <% end -%>
 log_name = swift-object-server
-workers = <%= workers %>
+workers = <%= @workers %>
 
 [pipeline:main]
-pipeline = <%= pipeline_real.join(' ') %>
+pipeline = <%= @pipeline_real.join(' ') %>
 
 [app:object-server]
 use = egg:swift#object
 
 [object-replicator]
-concurrency = <%= replicator_concurrency %>
+concurrency = <%= @replicator_concurrency %>
 
 [object-updater]
-concurrency = <%= updater_concurrency %>
+concurrency = <%= @updater_concurrency %>
 
 [object-auditor]
