--- a/deployment/puppet/swift/templates/proxy-server.conf.erb
+++ b/deployment/puppet/swift/templates/proxy-server.conf.erb
@@ -1,9 +1,9 @@
 # This file is managed by puppet.  Do not edit
 #
 [DEFAULT]
-bind_ip = <%= proxy_local_net_ip %>
-bind_port = <%= port %>
-workers = <%= workers %>
+bind_ip = <%= @proxy_local_net_ip %>
+bind_port = <%= @port %>
+workers = <%= @workers %>
 log_facility = LOG_SYSLOG
 <% if @debug then -%>
 log_level = DEBUG
@@ -16,10 +16,10 @@ log_name = swift-proxy-server
 user = swift
 
 [pipeline:main]
-pipeline = <%= pipeline.to_a.join(' ') %>
+pipeline = <%= @pipeline.to_a.join(' ') %>
 
 [app:proxy-server]
 use = egg:swift#proxy
-allow_account_management = <%= allow_account_management %>
-account_autocreate = <%= account_autocreate %>
+allow_account_management = <%= @allow_account_management %>
+account_autocreate = <%= @account_autocreate %>
 
